--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="client/public/manifest.json">
+    <link rel="shortcut icon" href="client/public/favicon.ico">
 
     <!-- these are things don't work as well with npm and webpack. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,6 +34,7 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+    RQ: I disabled the HTML plug-in that generated the index.HTML file and parsed the variables...so just write right the stuff in
     -->
     <title>Growth Ramp</title>
   </head>
