--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="app"></div>
-  <script src="/public/app.js"></script>
+  <script src="/app.js"></script>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
